--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Vcard</title>
+        <title>Shaun Lottering Resume</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="format-detection" content="telephone=no"/>
-
+	<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
         <link rel="shortcut icon" href="favicon.ico"/>
         <link href='http://fonts.googleapis.com/css?family=Patua+One|Montserrat|Open+Sans:400,700,600' rel='stylesheet' type='text/css'/>
         <link href="js/fancybox/jquery.fancybox.css?v=2.1.5" rel="stylesheet" type="text/css" media="screen"/>
@@ -47,15 +47,12 @@
             <div class="row-space">
 
                 <header id="header" class="row noprint">
-                    <h1 class="head-name">Amanda Smith</h1>
+                    <h1 class="head-name">Shaun Lottering</h1>
                     <div class="head-social">
                         <ul>
-                            <li class="tw"><a href="https://twitter.com/" target="_blank">Twitter</a></li>
-                            <li class="fb"><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
-                            <li class="lnkd"><a href="https://www.linkedin.com/" target="_blank">Linkedin</a></li>
-                            <li class="gplus"><a href="https://plus.google.com/" target="_blank">Google+</a></li>
-                            <li class="drb"><a href="http://dribbble.com/" target="_blank">Dribble</a></li>
-                            <li class="inst"><a href="http://instagram.com/" target="_blank">Instagram</a></li>
+                            <li class="fb"><a href="https://www.facebook.com/shaunfiddle" target="_blank">Facebook</a></li>
+                            <li class="lnkd"><a href="https://www.linkedin.com/in/shaun-lottering-7325ba8b/" target="_blank">Linkedin</a></li>
+                            <li class="inst"><a href="http://instagram.com/sfiddle" target="_blank">Instagram</a></li>
                         </ul>
                     </div>
                 </header>
@@ -68,7 +65,7 @@
                             <div class="col500 clearfix fl-left">
                                 <div class="profile-img"><img src="images/user_images/profile-img.jpg" alt="" /></div>
                                 <div class="profile-info">
-                                    <h3>I'm England Developer and Business Lady :)</h3>
+                                    <h3>Developer, Digital Marketer</h3>
                                     <p>Im Graphic designer and occasional author who specialises in designing
                                         brand identities. People hire me because I help make their businesses
                                         more profitable.</p>
@@ -79,16 +76,15 @@
 
                             <div class="col260 fl-right">
                                 <ul class="profile-data">
-                                    <li><h4>name</h4> <div>Amanda Smith</div></li>
-                                    <li><h4>Age</h4> <div>25</div></li>
-                                    <li><h4>Address</h4> <div>England, London, Street 27, UK</div></li>
-                                    <li><h4>E-mail</h4> <div>amandasmith@mail.com</div></li>
-                                    <li><h4>phone</h4> <div>+1 256 254 84 56</div></li>
-                                    <li><h4>freelance</h4> <div>Available</div></li>
+                                    <li><h4>name</h4> <div>Shaun Lottering</div></li>
+                                    <li><h4>Age</h4> <div>27</div></li>
+                                    <li><h4>Address</h4> <div>Johannesburg, South Africa</div></li>
+                                    <li><h4>E-mail</h4> <div>shaundlottering@gmail.com</div></li>
+                                    <li><h4>freelance</h4> <div>Unavailable</div></li>
                                 </ul>
                             </div>
                         </div>
-                        <a class="blog-link" href="blog.html">
+                        <a class="blog-link" target="_blank" href="http://www.sumof91.com">
                             <span class="icon"></span>
                             <span class="label">MY BLOG</span>
                         </a>
@@ -106,24 +102,17 @@
 
                                 <div class="resume-post">
                                     <div class="resume-post-body">
-                                        <div class="resume-post-date">2006 - 2007</div>
-                                        <h4 class="resume-post-title">Viena Programming School</h4>
-                                        <h5 class="resume-post-subtitle">PHP Computer School</h5>
+                                        <div class="resume-post-date">2005 - 2009</div>
+                                        <h4 class="resume-post-title">Kathstan College</h4>
+                                        <h5 class="resume-post-subtitle">Matriculated with University Exemption</h5>
                                         <div class="resume-post-cont">
-                                            <p>Perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                                                laudantium, totam rem aperiam, eaque ipsa quae.</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="resume-post">
-                                    <div class="resume-post-body">
-                                        <div class="resume-post-date">2007 - 2011</div>
-                                        <h4 class="resume-post-title">Web Design University</h4>
-                                        <h5 class="resume-post-subtitle">MTI University</h5>
-                                        <div class="resume-post-cont">
-                                            <p>Perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                                                laudantium, totam rem aperiam, eaque ipsa quae.</p>
+                                            <p>English</p>
+                                            <p>Afrikaans</p>
+                                            <p>Mathamatical Literacy</p>
+                                            <p>Life Orientation</p>
+                                            <p>Computer Applications Technology</p>
+                                            <p>Biology</p>	
+					    <p>Geography</p>	
                                         </div>
                                     </div>
                                 </div>
