--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                     <li><h4>Age</h4> <div>27</div></li>
                                     <li><h4>Address</h4> <div>Johannesburg, South Africa</div></li>
                                     <li><h4>E-mail</h4> <div>shaundlottering@gmail.com</div></li>
-                                    <li><h4>freelance</h4> <div>Unavailable</div></li>
+                                    <li><h4>freelance</h4> <div style="color:green;">Available</div></li>
                                 </ul>
                             </div>
                         </div>
