--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                             <div class="col260 fl-right">
                                 <ul class="profile-data">
                                     <li><h4>name</h4> <div>Shaun Lottering</div></li>
-                                    <li><h4>Age</h4> <div>27</div></li>
+                                    <li><h4>Age</h4> <div>28</div></li>
                                     <li><h4>Address</h4> <div>Johannesburg, South Africa</div></li>
                                     <li><h4>E-mail</h4> <div>shaundlottering@gmail.com</div></li>
-                                    <li><h4>freelance</h4> <div style="color:green;">Available</div></li>
+                                    <li><h4>freelance</h4> <div style="background-color:green;">Available</div></li>
                                 </ul>
                             </div>
                         </div>
@@ -192,11 +192,11 @@
 
                                     <div class="textwidget">
                                         <div class="skill-row">
-                                            <h4 class="skill-title">HTML 5</h4>
+                                            <h4 class="skill-title">HTML5</h4>
                                         </div>
 
                                         <div class="skill-row">
-                                            <h4 class="skill-title">CSS 3</h4>
+                                            <h4 class="skill-title">CSS3</h4>
                                         </div>
 
                                         <div class="skill-row">
@@ -529,16 +529,16 @@
                                 <h3>Contact info</h3>
                                 <ul class="contact-info">
                                     <li class="icon-home clearfix"><span class="icon"></span>
-                                        <span class="text">England, London, Street 27, UK</span>
+                                        <span class="text">Johannesburg, South Africa</span>
                                     </li>
                                     <li class="icon-phone clearfix"><span class="icon"></span>
-                                        <span class="text">+1 256 254 84 56</span>
+                                        <span class="text">+27 60 570 9221</span>
                                     </li>
                                     <li class="icon-maile clearfix"><span class="icon"></span>
-                                        <span class="text">amandasmith@mail.com</span>
+                                        <span class="text">shaundlottering@gmail.com</span>
                                     </li>
                                     <li class="icon-world clearfix"><span class="icon"></span>
-                                        <span class="text">http://sitename.com</span>
+                                        <span class="text">http://mywebguy.co.za</span>
                                     </li>
                                 </ul>
                             </div>
